[tool.poetry]
name = "unravel"
version = "0.1.0"
description = ""
authors = ["Thalida Noel <unravel@thalida.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.3.2"
parsel = "^1.8.1"
requests = "^2.31.0"
textual = "^0.52.1"

[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"
textual-dev = "^1.5.1"

[tool.poetry.scripts]
unravel = 'main:run'

[tool.ruff]
line-length = 119
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "Q"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
